--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -11,8 +11,22 @@ section {
   max-width: 1600px;
 }
 
-p > code, pre {
+code, pre {
   background: rgba(0, 0, 0, 0.2);
   border: inset 1px black;
   box-shadow: none;
+  padding: 2px 6px;
+}
+
+code code, pre code {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  margin: 0;
+  padding: 0;
+}
+
+#header {
+  top: auto;
+  bottom: 0;
 }
